--- a/index.html
+++ b/index.html
@@ -54,13 +54,9 @@
             width: 150px;
             height: 150px;
             border-radius: 50%;
-            background-color: var(--accent-color);
+            object-fit: cover;
+            border: 4px solid white;
             margin-bottom: 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 48px;
-            color: white;
         }
 
         .name {
@@ -392,7 +388,7 @@
 <body>
     <header>
         <div class="container profile-container">
-            <div class="profile-pic">AA</div>
+            <img src="Image (1).jpg" alt="Aditi Agarwal" class="profile-pic">
             <h1 class="name">ADITI AGARWAL</h1>
             <p class="title">DevOps Engineer</p>
             <div class="contact-info">
