--- a/index.html
+++ b/index.html
@@ -1071,10 +1071,9 @@
                 <p class="title">DevOps Engineer</p>
                 <p>Experienced DevOps Engineer specializing in cloud migration, infrastructure automation, and CI/CD implementation with expertise in AWS, Kubernetes, and monitoring tools.</p>
                 <div class="social-icons">
-                    <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
-                    <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="social-icon"><i class="fas fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/aditi-agarwal-b20159204/" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/adii2802" class="social-icon"><i class="fab fa-github"></i></a>
+                    <a href=""mailto:aditirajeshagarwal009@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
             <div class="header-image">
@@ -1432,10 +1431,9 @@
                 </div>
 
                 <div class="footer-social">
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fas fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/aditi-agarwal-b20159204/"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/adii2802"><i class="fab fa-github"></i></a>
+                    <a href=""mailto:aditirajeshagarwal009@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
 
                 <p class="copyright">&copy; 2025 Aditi Agarwal. All rights reserved.</p>
