--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/aditi-agarwal-b20159204/" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://github.com/adii2802" class="social-icon"><i class="fab fa-github"></i></a>
-                    <a href=""mailto:aditirajeshagarwal009@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto:aditirajeshagarwal009@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
             <div class="header-image">
@@ -1433,7 +1433,7 @@
                 <div class="footer-social">
                     <a href="https://www.linkedin.com/in/aditi-agarwal-b20159204/"><i class="fab fa-linkedin-in"></i></a>
                     <a href="https://github.com/adii2802"><i class="fab fa-github"></i></a>
-                    <a href=""mailto:aditirajeshagarwal009@gmail.com"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto:aditirajeshagarwal009@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
 
                 <p class="copyright">&copy; 2025 Aditi Agarwal. All rights reserved.</p>
